--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,44 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #f4f4f4;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
 
 #main {
-  padding: 2rem;
-  max-width: 800px;
-  margin: 0 auto;
+  padding: 3rem;
+  max-width: 900px;
+  margin: 2rem auto;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+#main h1{
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 #main h2 {
-  margin-bottom: 0.5rem;
-  margin-top: 1.5rem;
-  border-bottom: 1px solid #ccc;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  border-bottom: 2px solid #333;
+  padding-bottom: 0.5rem;
+  color: #333;
 }
 
 #main p {
-  margin-bottom: 1rem;
-  border-color: #646cff;
+  margin-bottom: 1.5rem;
+}
+
+#main ul {
+  list-style: none;
+  padding: 0;
+}
+
+#main ul li {
+  margin-bottom: 0.5rem;
 }
 
 .download-button {
@@ -80,20 +54,16 @@ button:hover {
   cursor: pointer;
   border-radius: 5px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.pdf-hidden{
+    display:none;
+}
+@media print{
+    .pdf-hidden{
+        display:block;
+    }
+    .download-button{
+        display:none;
+    }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
